Aula 05 - Trabalhando com cabeçalho, adicionando a TAG header e group quer são boas práticas de programação e adicionando a primeira imagem

--- a/curso-html5-pacote01/projeto-glass-html5/index.html
+++ b/curso-html5-pacote01/projeto-glass-html5/index.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
 
-<html lang="pt-br">
+<html lang="pt-br"> <!-- Indicar no buscador do google arquivo em português -->
 
 <head>
-	<meta charset="utf-8"/>
-	<title>Tudo sobre Google Glass</title>
+	<meta charset="utf-8"/> <!-- Para aceitar acentuações -->
+	<title>Tudo sobre Google Glass</title> <!-- Título que aparece na aba do navegador -->
 </head>
 
 <body>
 	<div id="interface">
 
-		Google Glass
-		A revolução do Google está chegando
+		<header id="cabecalho">
+			<!-- Agrupando os Títulos da página (Boa prática) -->
+			<hgroup>
+				<h1>Google Glass</h1>
+				<h2>A revolução do Google está chegando</h2>
+			</hgroup>
 
-		[AQUI ENTRA UMA FOTO]
+			<!-- Adicionando uma imagem -->
+			<img src="/home/vinicius/Desktop/HTML/curso-html5-pacote01/projeto-glass-html5/_imagens/glass-oculos-preto-peq.png">
 
-		Menu Principal
-		- Home
-		- Especificações
-		- Fotos
-		- Multimídia
-		- Fale conosco
+			Menu Principal
+			- Home
+			- Especificações
+			- Fotos
+			- Multimídia
+			- Fale conosco
+
+		</header>
 
 		Tecnologia > Inovações
 		Saiba tudo sobre o Google Glass
