Alteraçõa nos comentários

--- a/curso-html5-pacote01/projeto-glass-html5/index.html
+++ b/curso-html5-pacote01/projeto-glass-html5/index.html
@@ -6,7 +6,7 @@ A TAG $nbsp é equivalente a um espaço
 <wbr/> Vai quebrar a palavra sem ifenização
 <b>Negrito</b>
 <i>itálico</i>
-<em>Outra maneira de "deixar em itálico</em>
+<em>Outra maneira de "deixar em itálico"</em>
 <del>Risca o meio da palavra</del>
 <span>Utilizada para formatar pequenos trechos de texto</span>
 <span style="text-decoration: line-through;">Risca no meio</span>
