Aula 8 - Trabalhando com cores de fontes e background

--- a/curso-html5-pacote01/projeto-glass-html5/index.html
+++ b/curso-html5-pacote01/projeto-glass-html5/index.html
@@ -28,6 +28,7 @@ A TAG $nbsp é equivalente a um espaço
 	}
 </code>
 </pre>
+rgba(0,0,0,1) 'A' é o nível de transparência
 
 <h1>Símbolos especiais</h1>
 
@@ -84,6 +85,11 @@ A TAG $nbsp é equivalente a um espaço
 
 	<!-- Aplicando as formatações na TAG <p> para alterar o texto sempre que a utilizarmos  -->
 	<style>
+		body{
+
+			background-color: white;
+			color: rgba(0,0,0,1); /*Altera a cor da fonte*/ 
+		}
 		p{
 			text-align: justify;
 			text-indent: 50px;
