--- a/curso-html5-pacote01/projeto-glass-html5/index.html
+++ b/curso-html5-pacote01/projeto-glass-html5/index.html
@@ -82,20 +82,8 @@ rgba(0,0,0,1) 'A' é o nível de transparência
 <head>
 	<meta charset="utf-8"/> <!-- Para aceitar acentuações -->
 	<title>Tudo sobre Google Glass</title> <!-- Título que aparece na aba do navegador -->
-
-	<!-- Aplicando as formatações na TAG <p> para alterar o texto sempre que a utilizarmos  -->
-	<style>
-		body{
-
-			background-color: white;
-			color: rgba(0,0,0,1); /*Altera a cor da fonte*/ 
-		}
-		p{
-			text-align: justify;
-			text-indent: 50px;
-		}
-
-	</style>
+	<link rel="stylesheet" type="text/css" href="_css/estilo.css"/>
+	
 </head>
 
 <body>
@@ -130,7 +118,7 @@ rgba(0,0,0,1) 'A' é o nível de transparência
 		<h2>O que é</h2>
 		<p>O <span style="font-weight: 900;">Google Glass</span> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <i>Project Glass</i>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeoconferências. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o <em>Google Glass</em> encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
 
-		<figure>
+		<figure class="foto-legenda">
 			<img src="_imagens/glass-quadro-homem-mulher.jpg">
 			<!--Legenda para imagem com contexto-->
 			<figcaption>
