--- a/curso-html5-pacote01/projeto-glass-html5/index.html
+++ b/curso-html5-pacote01/projeto-glass-html5/index.html
@@ -99,12 +99,18 @@ rgba(0,0,0,1) 'A' é o nível de transparência
 			<!-- Adicionando uma imagem -->
 			<img src="_imagens/glass-oculos-preto-peq.png">
 
-			Menu Principal
-			- Home
-			- Especificações
-			- Fotos
-			- Multimídia
-			- Fale conosco
+			<nav>
+				<h1>Menu Principal</h1>
+				
+				<!--Criando uma lista ordenada (OL)-->
+				<ul type="disk"><!--Start só aceita número para dizer a posição onde vai começar-->
+					<li>Home</li>
+					<li>Especificações</li>
+					<li>Fotos</li>
+					<li>Multimídia</li>
+					<li>Fale conosco</li>
+				</ol>
+			</nav>
 
 		</header>
 
