Aula 13 - Trabalhando com o menu(mudando posições e tudo mais)

--- a/curso-html5-pacote01/projeto-glass-html5/index.html
+++ b/curso-html5-pacote01/projeto-glass-html5/index.html
@@ -99,7 +99,7 @@ rgba(0,0,0,1) 'A' é o nível de transparência
 			<!-- Adicionando uma imagem -->
 			<img src="_imagens/glass-oculos-preto-peq.png">
 
-			<nav>
+			<nav id="menu">
 				<h1>Menu Principal</h1>
 				
 				<!--Criando uma lista ordenada (OL)-->
