Aula 15 - Formatação de algumas interfaces

--- a/curso-html5-pacote01/projeto-glass-html5/index.html
+++ b/curso-html5-pacote01/projeto-glass-html5/index.html
@@ -97,7 +97,7 @@ rgba(0,0,0,1) 'A' é o nível de transparência
 			</hgroup>
 
 			<!-- Adicionando uma imagem -->
-			<img src="_imagens/glass-oculos-preto-peq.png">
+			<img id="icone" src="_imagens/glass-oculos-preto-peq.png">
 
 			<nav id="menu">
 				<h1>Menu Principal</h1>
